# Cattle_Scanner

./: CMakeLists.txt  Client_V3.py  Client_V4.py  Client_scanner_v2.py  Client_version1.py  Pipeline_test.ipynb  README.md  Register_sensors_paper.ipynb  SIFT_registration.ipynb  calib_apriltag.py  calibrate_azure_kinect.py  calibrate_azure_kinect_v2.py  client_v4.py  colorize_depth.py  cp_depth.sh  cp_jpegs.sh  create_point_clouds.sh  flying_pixel_filter.py  generate_colored_pcds.py  launch_server.sh  main.cpp  pipeline_code.py  process_cattle_data.sh  process_cattle_head.py  read_write_mkv.py  reboot_nanos.sh  register_cattle_07_24.ipynb  register_pcd_depth_only_09_21_2023.ipynb  run_pipeline.sh  scanner_pipeline_code.py  send_data.sh  shutdown_nanos.sh  update_autostart.sh  update_launch_server.sh  update_send_data.sh  update_server.sh  zmq_copy.py  zmq_copy1.py  zmq_server.py
